--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ addons:
 services:
   - docker
 before_install:
-  - docker pull fr3akyphantom/droid-builder:latest
+  - docker pull fr3akyphantom/droid-builder:bionic
 before_script:
   - cd $HOME && mkdir twrp
   # download the TWRP Compressed Source Files from PhantomZone54's Release
@@ -20,14 +20,12 @@ before_script:
   - wget -q ${TWRP_SOURCE} -O $HOME/twrp.tar.xz
   - tar -xJf twrp.tar.xz --directory $HOME/twrp/ && rm twrp.tar.xz
 script:
-  # Replace your $$USERNAME$$, $$REPO_URL$$, $$BRAND$$, $$DEVICE$$
   - cd $HOME/twrp/ && git clone https://github.com/neoFuzz/twrp_device_mt6735_pad.git device/Pad_Ultra/Pad_Ultra
   - rm -rf bootable/recovery && git clone https://github.com/omnirom/android_bootable_recovery -b android-9.0 --depth 1 bootable/recovery
   - |
-    docker run --rm -i -e USER_ID=$(id -u) -e GROUP_ID=$(id -g) -v "$(pwd):/home/builder/twrp/:rw,z" -v "${HOME}/.ccache:/srv/ccache:rw,z" fr3akyphantom/droid-builder bash << EOF
+    docker run --privileged --rm -i -e USER_ID=$(id -u) -e GROUP_ID=$(id -g) -v "$(pwd):/home/builder/twrp/:rw,z" -v "${HOME}/.ccache:/srv/ccache:rw" fr3akyphantom/droid-builder:bionic /bin/bash << EOF
     cd /home/builder/twrp/
     source build/envsetup.sh
-    # Choose build flavor as "eng" or "userdebug"
     BUILD_FLAVOR="eng"
     lunch omni_Pad_Ultra-${BUILD_FLAVOR}
     make -j$(nproc --all) recoveryimage
