--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ script:
   - cd $HOME/twrp/ && git clone https://github.com/neoFuzz/twrp_device_mt6735_pad.git device/Pad_Ultra/Pad_Ultra
   - rm -rf bootable/recovery && git clone https://github.com/omnirom/android_bootable_recovery -b android-9.0 --depth 1 bootable/recovery
   - |
-    docker run --privileged --rm -i -e USER_ID=$(id -u) -e GROUP_ID=$(id -g) -v "${HOME}:/home/builder:rw,z" -v "${HOME}/.ccache:/srv/ccache:rw" fr3akyphantom/droid-builder:bionic /bin/bash << EOF
+    docker run --privileged --rm -i -e USER_ID=$(id -u) -e GROUP_ID=$(id -g) -v "$HOME:/home/builder:rw,z" -v "$HOME/.ccache:/srv/ccache:rw" fr3akyphantom/droid-builder:bionic /bin/bash << EOF
     cd /home/builder/twrp/
     source build/envsetup.sh
     BUILD_FLAVOR="eng"
