--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,13 @@ before_script:
   - tar -xJf twrp.tar.xz --directory $HOME/twrp/ && rm twrp.tar.xz
 script:
   - cd $HOME/twrp/ && git clone https://github.com/neoFuzz/twrp_device_mt6735_pad.git device/Pad_Ultra/Pad_Ultra
-  - rm -rf bootable/recovery && git clone https://github.com/omnirom/android_bootable_recovery -b android-9.0 --depth 1 bootable/recovery
+  - rm -rf bootable/recovery && git clone https://github.com/omnirom/android_bootable_recovery -b android-7.0 --depth 1 bootable/recovery
   - |
-    docker run --privileged --rm -i -e USER_ID=$(id -u) -e GROUP_ID=$(id -g) -v "$HOME:/home/builder:rw,z" -v "$HOME/.ccache:/srv/ccache:rw" fr3akyphantom/droid-builder:bionic /bin/bash << EOF
+    docker run --privileged --rm -i -e USER_ID=$(id -u) -e GROUP_ID=$(id -g) -v "$(pwd):/home/builder/twrp/:rw,z" -v "${HOME}/.ccache:/srv/ccache:rw" fr3akyphantom/droid-builder:bionic /bin/bash << EOF
     cd /home/builder/twrp/
+    export ALLOW_MISSING_DEPENDENCIES=true
     source build/envsetup.sh
-    BUILD_FLAVOR="eng"
-    lunch omni_Pad_Ultra-${BUILD_FLAVOR}
+    lunch omni_Pad_Ultra-eng
     make -j$(nproc --all) recoveryimage
     exit
     EOF
