--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ before_script:
   - wget -q ${TWRP_SOURCE} -O $HOME/twrp.tar.xz
   - tar -xJf twrp.tar.xz --directory $HOME/twrp/ && rm twrp.tar.xz
 script:
+  - cd $HOME
+  - chmod a+rw twrp/
   - cd $HOME/twrp/ && git clone https://github.com/neoFuzz/twrp_device_mt6735_pad.git device/Pad_Ultra/Pad_Ultra
   - rm -rf bootable/recovery && git clone https://github.com/omnirom/android_bootable_recovery -b android-7.0 --depth 1 bootable/recovery
   - |
